--- a/index.html
+++ b/index.html
@@ -212,15 +212,15 @@
         <div class="contact-info">
             <div>
                 <i class="fas fa-envelope"></i>
-                <p>Email: lokeshgowda@agri-connect.com</p>
+                <p>Email: nisargaba@agri-connect.com</p>
             </div>
             <div>
                 <i class="fas fa-phone"></i>
-                <p>Contact: 7676908564</p>
+                <p>Contact: 8123147925</p>
             </div>
             <div>
                 <i class="fas fa-map-marker-alt"></i>
-                <p>Address: Miller'46, KSV Nilaya, Vasanthanagara</p>
+                <p>Avadhani nagara,Hiriyur</p>
             </div>
         </div>
     </section>
