--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1>Welcome to AGRI-CONNECT</h1>
-            <p>Empowering farmers by connecting them directly to vendors.</p>
+            <p>Empowering farmers by connecting them directly to buyers.</p>
             <div class="login-options">
                 <div class="login-card">
                     <h3><i class="fas fa-user"></i> Farmer Login</h3>
                     <a href="Farmer_Login.html"><i class="fas fa-sign-in-alt"></i> Login</a>
                 </div>
                 <div class="login-card">
-                    <h3><i class="fas fa-user"></i> Vendor Login</h3>
+                    <h3><i class="fas fa-user"></i> Buyer Login</h3>
                     <a href="Buyer_Login.html"><i class="fas fa-sign-in-alt"></i> Login</a>
                 </div>
             </div>
