--- a/Buyer_Login.html
+++ b/Buyer_Login.html
@@ -148,7 +148,7 @@ button[type="submit"]:hover {
   <div class="background">
     <div class="container">
       <div class="content">
-        <h1>Vendor</h1>
+        <h1>Buyers</h1>
         <div class="toggle-buttons">
           <button id="loginBtn" onclick="showLogin()">Login</button>
           <button id="signupBtn" onclick="showSignup()">Sign-up</button>
